<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminRegistrationActivity">

    <TextView
        android:id="@+id/collegeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/admin_register"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/editTextAdminUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editTextAdminPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextAdminUserId"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editTextAdminEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextAdminPhone"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAdminPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextAdminEmail"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password">

        <EditText
            android:id="@+id/editTextAdminPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_eye_toggle"
            android:drawablePadding="8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Eye toggle button -->
    <ImageButton
        android:id="@+id/eyeButton"
        android:layout_width="21dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textInputLayoutAdminPassword"
        android:layout_alignEnd="@id/textInputLayoutAdminPassword"
        android:layout_alignBottom="@id/textInputLayoutAdminPassword"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_eye_toggle" />


    <Button
        android:id="@+id/buttonAdminCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="110dp"
        android:text="@string/create" />

    <Button
        android:id="@+id/buttonAdminGoToLogin"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="195dp"
        android:text="@string/to_login" />


</RelativeLayout>

