<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FacultyLoginActivity">

    <TextView
        android:id="@+id/collegeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/faculty_login"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextFacultyUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/collegeName"
        android:layout_marginTop="198dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/editTextFacultyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextFacultyUsername"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonFacultyLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextFacultyPassword"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="Login" />

    <Button
        android:id="@+id/buttonFacultyRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonFacultyLogin"
        android:layout_marginStart="50dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="50dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/buttonForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonFacultyRegister"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/forgot_password" />

</RelativeLayout>