<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CoordinatorHomePageActivity">


    <!-- TextView to display the "Allocated Class" label -->
    <TextView
        android:id="@+id/allocatedClassLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:text="Allocated Class:"
        android:textColor="#F8FAFA"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- TextView to display the allocated class name -->
    <TextView
        android:id="@+id/allocatedClassTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_toEndOf="@id/allocatedClassLabelTextView"
        android:layout_marginTop="50dp"
        android:text=""
        android:textColor="#F8FAFA"
        android:textSize="18sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/login"
        android:layout_width="243dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:text="@string/coordinator"
        android:textColor="#F8FAFA"
        android:textSize="30sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="121dp"
        android:text="@string/assign_faculty" />

    <Button
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/timetable" />

    <Button
        android:id="@+id/StudentDB_btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/student_db" />


    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/StudentDB_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/attendance" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="45dp"
        android:text="@string/sign_out" />


</RelativeLayout>
